--- a/AI组/周记/第一周.md
+++ b/AI组/周记/第一周.md
@@ -14,10 +14,10 @@
 Pycharm，Anaconda,Jupyter均已装好
 
 
-
 这周进行了工数，线代的着重学习，复习了Python三大库的内容，复习了
 机器学习的线性回归模型，做了个简单的多变量线性回归模型练练手。
 
+![Uploading image.png…]()
 
 ***
 ### 存在问题
