--- a/AI组/周记/第一周.md
+++ b/AI组/周记/第一周.md
@@ -17,6 +17,7 @@ Pycharm，Anaconda,Jupyter均已装好
 这周进行了工数，线代的着重学习，复习了Python三大库的内容，复习了
 机器学习的线性回归模型，做了个简单的多变量线性回归模型练练手。
 
+![image](https://github.com/RunningGT/GT-s-Room/blob/main/AI%E7%BB%84/Image/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202024-03-21%20182959.png)
 ***
 ### 存在问题
 
