--- a/AI组/Week_2/第二周周记.md
+++ b/AI组/Week_2/第二周周记.md
@@ -16,6 +16,8 @@
 
 刚开始做鸢尾花是，我想试试能不能分类然后用逻辑回归，感觉有点麻烦，索性学了下softmax回归。跑出来感觉不对，才发现下载的数据集中是根据鸢尾花的种类排列好了，我需要从各种类切割再组合。后面换了K-means就不用考虑这个了，直接3个簇来出。
 
+![Uploading image.png…]()
+
 ## 存在问题
 1.消耗了很多时间在改一些低级的bug上，有很多都是方法不恰当整出来的。各种莫名其妙的报错，查资料，问ai，拖慢了很多进度。
 2.有些优化的方法以为用不着就没学，比如分箱，交叉验证，结果后来看了别人的代码才发现有很多看起来用不着的方法，可以加进来优化模型。
